# dirstat-pro

./: .folder_summary.txt  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
folder_summary/: .folder_summary.txt  __init__.py  advanced_filters.py  cli.py  code_analysis.py  core.py  dependency_analysis.py  exporters.py  git_utils.py  storage_utils.py
tests/: .folder_summary.txt  test_core.py
